# llm_summarization_cli

./: README.md
example/ollama_summarization_cli_script/: README.md  config_final.json  config_start.json  ollama_summarization_cli.bat  ollama_summarization_cli_for_subtitle_file.bat  ollama_summarization_cli_for_subtitle_file.sh
koboldai_summarization_cli/: Cargo.toml  LICENSE  README.md  params.json
koboldai_summarization_cli/src/: main.rs
ollama_summarization_cli/: Cargo.toml  README.md
ollama_summarization_cli/src/: main.rs
utilities/json_text_merger/: Cargo.toml  README.md
utilities/json_text_merger/src/: main.rs
utilities/noscribe_transcript_extractor/: Cargo.toml  README.md
utilities/noscribe_transcript_extractor/src/: main.rs
utilities/subtitle_file_to_txt/: Cargo.toml  README.md
utilities/subtitle_file_to_txt/src/: main.rs
utilities/transcript-splitter/: Cargo.toml  README.md  config.json
utilities/transcript-splitter/src/: main.rs
