[package]
name = "koboldai_summarization_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.24"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"
indicatif = "0.17.0"